@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2017-10-04
+ * check_privilege in Wing::Role::Result::Field now will also describe the field if it is privileged.
+
 2017-09-25
  * No longer sending Dancer server tokens.
  * Added a very basic security report collector web service.
